--- a/Discussion/ev4WriteUp.tex
+++ b/Discussion/ev4WriteUp.tex
@@ -116,7 +116,7 @@
 \vspace{0.2in}
 
 \begin{abstract}
-New features were added to our shared calendar web application in accordance with evolution four's requirements. Among these functionality additions is the support for PUD escalation, calendar export through email, preference based sign up events, and mass event creation. 
+New features were added to our shared calendar web application in accordance with evolution four's requirements. Among these functionality additions is the support for PUD priority escalation, calendar export through email, preference based sign up events, and mass event creation. 
 \end{abstract}
 
 \tableofcontents
@@ -147,10 +147,10 @@ This feature was implemented using the \texttt{nodemailer} module that we import
 \subsubsection*{En Masse Event Creation}
 This feature was pretty simple to execute as we already have a dedicated route to event creation. Hence, given text input, the front end parses the input and issues the needed amount of POST requests to the \texttt{/event} endpoint.
 \subsubsection*{Priority Escalation for PUDs}
-This feature was a little difficult to implement as previously we had handled priorities by the PUDs index in the users array of PUDs. We thought about scrapping this idea and implementing a priority number, but in the end, we didn't want to change previously written functionality. Hence, we continued to use the array index method for priority. To allow for certain PUDs to escalate, we set a \texttt{willEscalate} property in the database. Using the \texttt{setInterval()} function provided by node, the server will check every day which PUDs need to be escalated.
+This feature was a little difficult to implement as previously we had handled priorities by the PUDs index in the users array of PUDs. We thought about scrapping this idea and implementing a priority number, but in the end, we didn't want to change previously written functionality. Hence, we continued to use the array index method for priority. To allow for certain PUDs to escalate, we set a \texttt{willEscalate} property in the database. Using the \texttt{setInterval()} function provided by node, the server checked every day which PUDs need to be escalated, running the escalation algorithm if needed.
 
 \subsubsection*{Preference Sign Ups}
-Preference sign ups required the most edits to our pre-existing code on the back end. Specifically, we had to add additional properties to the database model for the Slot Sign Up as well as change the slot sign up creation route (POST to \texttt{/ssu}). Before, this route would finalize the sign up and remove it from the available free blocks. Now, we've implemented extra functionality into the async.js waterfall array in the ssu creation process and added a check in the PUT request to the \texttt{/signup/:ssuId} endpoint.\\~\\
+Preference sign ups required the most edits to our pre-existing code in the back end. Specifically, we had to add additional properties to the database model for the Slot Sign Up as well as change the slot sign up creation route (POST to \texttt{/ssu}). Before, this route would finalize the sign up and remove the chosen time block from the available free blocks. Now, we've implemented extra functionality into the async.js waterfall array in the ssu creation process and added a check in the PUT request to the \texttt{/signup/:ssuId} endpoint.\\~\\
 The flow for the slot sign up is now this: either the SSU is normal so slots are immediately assigned to a user or the SSU is preference based in which we store the preferred time slots for each user. This information is stored in the \texttt{SlotSignUp.preferences} property of the model. This \texttt{preferences} structure holds the preferences for each user and is ultimately the data used to actually assign the slots at the SSU's deadline.\\~\\
 The deadline was repeatedly checked using Node's built-in \texttt{setInterval()} function which was discussed in the previous sub section. \\~\\
 Finally, we implemented a simple greedy algorithm to assign the slots to the various invitees. Although this might not produce the optimal assignment in the given matching problem, we felt this was ok due to the fact that the SSU creator would ultimately be able to manually change the assignments before finalizing. This is not the most ideal solution, but in an effort to present a functioning application, we took the hit on scope, something we would continue to expand upon in future developments. See section Future Work for more discussion on this. 
@@ -158,16 +158,16 @@ Finally, we implemented a simple greedy algorithm to assign the slots to the var
 
 \subsection{Benefits of Our Previous Design}
 The major and most noticeable benefit from our previous design was how re-usable it was. From the beginning, we treated the back end of our application as an exposed services API, providing a set of methods that virtually any front end could use. This re-usability came about because we continued to write short and single purpose methods for every service. And on a broader sense, all of our ``routes" were written to complete a single task---create an event, delete a user, send an email, etc. So, for example, when faced with text parsing, all that needed to be done was the actual parsing of the text, because once the data was gathered, it was just a matter of looping through and initiating a POST request to the \texttt{/event} end point for each event. \\~\\
-The re-usability came about from our file organization as well. In the third evolution, we began to increase our use of Mongoose.js ``schema" methods. This allowed us to treat our database models effectively as java classes. Many of our route files might need to convert user ids to user emails, and because of schema methods, we were easily able to make that functionality visible to any file that needed it by using javascripts \texttt{require()} method.
+The re-usability came about from our file organization as well. In the third evolution, we began to increase our use of Mongoose.js ``schema" methods (think \texttt{public} java class methods). This allowed us to treat our database models effectively as java classes. Many of our route files might need to convert user ids to user emails, and because of schema methods, we were easily able to make that functionality visible to any file that needed it by using javascript's \texttt{require()} method.
 
 \subsection{Drawbacks of Our Previous Design}
 The most time consuming feature was the preference based sign up. Why? Well we discussed that this type of feature---one that modifies pre-existing functionality---was the hardest, but the main reason for its difficulty came about because we made too many assumptions when designing the \texttt{SlotSignUp} model.\\~\\
 Before, we had pretty rigid process for handling the slot sign up creation that used async.js \texttt{waterfall()} method. Now, though, certain parts of that async waterfall did not need to be called or additional asynchronous functions needed to be added to the function array. These additions or omittances changed the dependencies between each individual function in the waterfall function array. The required changes were great in number and therefore so were the errors. \\~\\
-In addition to specific design pitfalls, another more general problem arose: our file sizes were becoming very large and difficult to follow. As we added more features to pre-existing code, it became apparent that in some files we had just continued to populate the files without giving thought to potentially extracting the code out into a new file---the \texttt{SlotSignUpRoute.js} is almost 500 lines long. I think the solution here is to recognize this earlier and spend more time on discussion of new feature integration rather than just attempting to cram in the new features all into preexisting architecture. 
+In addition to specific design pitfalls, another more general problem arose: our file sizes were becoming very large and difficult to follow. As we added more features to pre-existing code, it became apparent that in some files we had just continued to populate the files without giving thought to potentially extracting the code out into a new file---the \texttt{SlotSignUpRoute.js} is almost 500 lines long. I think the solution here is to recognize this earlier and spend more time on discussion of new feature integration rather than just attempting to cram in the new features all into pre-existing architecture. 
 
 \subsection{Future Developments}
 For the most part, we on the back-end feel proud of our work and the functionality our application provides. With that being said, there are a couple of things we would continue to develop if we were to get this application customer ready.\\~\\
-First, we would spend more optimizing the preference based sign up algorithm. As stated in a previous section, our algorithm is simple and greedy. This works, but is not the best. Ideally we would construct the situation using a bipartite graph (invitees are one type of node, and slots are the other type with edges being weighted by preference). If we were able to implement this structure, we could run a simple maximal perfect matching algorithm which would give the optimal assigment.\\~\\
+First, we would spend more optimizing the preference based sign up algorithm. As stated in a previous section, our algorithm is simple and greedy. This works, but does not provide the optimal solution every time it is ran. Ideally we would construct the problem using a bipartite graph (invitees are one type of node, and slots are the other type with edges representing preferences being weighted by preference). If we were able to implement this structure, we could run a simple maximal perfect matching algorithm which would give the optimal assignment.\\~\\
 Lastly, we would like to make our application more robust in dealing with errors and form formatting. Currently, no checking is done to see whether or not the user entered in a correct email for example. These aspects of an application are what make it ready for market and would be a must if we were to push this calendar into production.\\~\\
 
 \section{Front End Design and Analysis}
@@ -179,7 +179,7 @@ Lastly, we would like to make our application more robust in dealing with errors
 The extra features to PUD events including an expiry time and priority escalation were handled on the front-end by simply adding fields to the PUD creation form and sending this data to the back-end. Both of these features  took front-end input but the functionality was handled separately in the back-end.
 
 \subsubsection{Preference-based Sign Up}
-
+{\color{red} WAYNE TODO }
 
 \subsubsection{En Masse Event Creation}
 
@@ -194,21 +194,23 @@ The implementation of the features in this evolution were fairly straightforward
 
 \subsection{Drawbacks of Our Previous Design}
 
+{\color{red} WAYNE TODO }
+
 \section{Individual Portion}
 \subsection*{Parker}
 
 \begin{enumerate} [a)]
 \item {\bf Designing System Components}
 \begin{enumerate} [$\cdot$]
-\item I designed the system component that handled the auto PUD creation for all invitees. This required a variable number of asynchronous functions to be executed back to back. More specifically, it was dependent on the number of invitees to the sign up event. To accomplish this in an efficient manner, I created a function that created an array of functions. (see functions \texttt{createWaterfallArray()} and \texttt{createFunctionInArray()} in the file \texttt{SlotSignUpRoutes.js}). In short, I bundled all of the PUD creation code for one user into a variable and created one for each invitee. Async.js executes the array of functions. The benefit from designing the component in this way was to simplify the code and make it more readable. Without this array of functions, there would have been very deep callback hells. The design also allowed us to continue to make use of pre-written libraries that helped with asynchronous things, minimizing the amount of code we had to write in the end.
+\item I designed the system component that handled the auto PUD creation for all invitees. This required a variable number of asynchronous functions to be executed back to back. More specifically, it was dependent on the number of invitees to the sign up event. To accomplish this in an efficient manner, I created a function that created an array of functions. (see functions \texttt{createWaterfallArray()} and \texttt{createFunctionInArray()} in the file \texttt{SlotSignUpRoutes.js}). In short, I bundled all of the PUD creation code for one user into a variable and created one for each invitee. Async.js executes the array of functions. The benefit from designing the component in this way was to simplify the code and make it more readable. Without this array of functions, there would have been very deep callback hells. The design also allowed us to continue to make use of pre-written libraries that helped with javascript's asynchronous nature, minimizing the amount of code we had to write in the end.
 \end{enumerate}
 \item  {\bf Designing and Conducting Experiments}
 \begin{enumerate} [$\cdot$]
-\item For the auto pud creation feature in preference based sign ups, we had to perform a number of asynchronous operations based on an input size (number of invitees). To do this, I had to create an array of functions which was only made possible by the fact that javascript uses first-class functions. To test this function array creation, I started writing simple examples. I would then loop through the array of functions, executing each and making sure they executed correctly. The next step was to gradually turn my simple examples into ones that performed the functionality required by the feature. 
+\item For the auto pud creation feature in preference based sign ups, we had to perform a number of asynchronous operations based on an input size (number of invitees). To do this, I had to create an array of functions which was only made possible by the fact that javascript uses first-class functions. To test this function array creation, I started writing simple examples. I would then loop through the array of functions, executing each and making sure they executed correctly. The next steps were to gradually turn my simple examples into ones that performed the functionality required by the feature. This iterative, experimental process proved to be extremely time consuming as it allowed me to fully understand the inner workings of some of the async.js library functions.
 \end{enumerate}	
 \item  {\bf Analyzing and Interpreting Data}
 \begin{enumerate} [$\cdot$]
-\item One use of first class functions is the callback, a way that javascript handles asynchronous functions. I wrote my own asynchronous function that utilized a callback exit. Unfortunately this function produced an error I had never seen before, one that dealt with http protocols. Specifically the response header was being set after the response had been sent. Confusing... . However, I was able to read the stack trace in the console, pinpoint the location of the error, and deduce the type of error. With the error type and location, I was able to eventually fix the bug by reading internet forums and Express.js API pages.
+\item One use of first class functions is the callback, a way that javascript handles asynchronous functions. I wrote my own asynchronous function that utilized a callback exit. Unfortunately this function produced an error I had never seen before, one that dealt with HTTP protocols. Specifically the response header was being set after the response had been sent. Confusing! However, I was able to read the stack trace in the console, pinpoint the location of the error, and deduce the type of error. With the error type and location, I was able to eventually fix the bug by reading internet forums and Express.js API pages.
 \end{enumerate}
 \item {\bf Dealing with Realistic Constraints}
 \begin{enumerate} [$\cdot$]
